# UT_PRJ

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ap  cmake_install.cmake
headers/: bishop.h  board.h  game_manager.h  king.h  knight.h  null.h  pawn.h  piece.h  queen.h  rook.h
sources/: bishop.cpp  board.cpp  game_manager.cpp  king.cpp  knight.cpp  main.cpp  null.cpp  pawn.cpp  queen.cpp  rook.cpp
